Add debug step for secret variable logging
Added debug steps to log secret variable lengths.

--- a/.github/workflows/atualizar_csv.yml
+++ b/.github/workflows/atualizar_csv.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Debug leitura dos secrets
+        run: |
+          echo "VTEX_ACCOUNT_NAME = '$VTEX_ACCOUNT_NAME'"
+          echo "VTEX_APP_KEY length = ${#VTEX_APP_KEY}"
+          echo "VTEX_APP_TOKEN length = ${#VTEX_APP_TOKEN}"
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
