Add step to run lista_sellers.py script

--- a/.github/workflows/atualizar_csv.yml
+++ b/.github/workflows/atualizar_csv.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Rodar script Geral VTEX
         run: python src/pedidos_gerais.py
 
+      - name: Rodar script Lista Sellers
+        run: python src/lista_sellers.py
+
       - name: Commit CSV
         run: |
           git config user.name "github-actions"
